native/java/bindings/zusf_c_api.h

// Generic response structs
typedef struct {
    char* error_message; // Non-null if an error occurred
} ZUSFBasicResponse_C;
typedef struct {
    char* data;          // The string response content
    char* error_message; // Non-null if an error occurred
} ZUSFStringResponse_C;
ZUSFStringResponse_C* zusf_c_write_uss_file(const char* file, const char* data, const char* codepage, const char* etag);
ZUSFBasicResponse_C* zusf_c_chmod_uss_item(const char* file, const char* mode, bool recursive);
ZUSFBasicResponse_C* zusf_c_delete_uss_item(const char* file, bool recursive);
ZUSFBasicResponse_C* zusf_c_chown_uss_item(const char* file, const char* owner, bool recursive);
ZUSFBasicResponse_C* zusf_c_chtag_uss_item(const char* file, const char* tag, bool recursive);
// Free functions
void zusf_c_free_basic_response(ZUSFBasicResponse_C* response);