native/java/app/src/main/java/org/zowe/zowex/ffm/generated/ZusfCApi.java


    private static class zusf_c_write_uss_file {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            ZusfCApi.C_POINTER,
            ZusfCApi.C_POINTER,
            ZusfCApi.C_POINTER,
            ZusfCApi.C_POINTER,
            ZusfCApi.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("zusf_c_write_uss_file");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * ZUSFStringResponse_C *zusf_c_write_uss_file(const char *file, const char *data, const char *codepage, const char *etag)
     * }
     */
    public static FunctionDescriptor zusf_c_write_uss_file$descriptor() {
        return zusf_c_write_uss_file.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * ZUSFStringResponse_C *zusf_c_write_uss_file(const char *file, const char *data, const char *codepage, const char *etag)
     * }
     */
    public static MethodHandle zusf_c_write_uss_file$handle() {
        return zusf_c_write_uss_file.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * ZUSFStringResponse_C *zusf_c_write_uss_file(const char *file, const char *data, const char *codepage, const char *etag)
     * }
     */
    public static MemorySegment zusf_c_write_uss_file$address() {
        return zusf_c_write_uss_file.ADDR;
    }

    /**
     * {@snippet lang=c :
     * ZUSFStringResponse_C *zusf_c_write_uss_file(const char *file, const char *data, const char *codepage, const char *etag)
     * }
     */
    public static MemorySegment zusf_c_write_uss_file(MemorySegment file, MemorySegment data, MemorySegment codepage, MemorySegment etag) {
        var mh$ = zusf_c_write_uss_file.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("zusf_c_write_uss_file", file, data, codepage, etag);
            }
            return (MemorySegment)mh$.invokeExact(file, data, codepage, etag);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class zusf_c_chmod_uss_item {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            ZusfCApi.C_POINTER,
            ZusfCApi.C_POINTER,
            ZusfCApi.C_POINTER,
            ZusfCApi.C_BOOL
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("zusf_c_chmod_uss_item");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * ZUSFBasicResponse_C *zusf_c_chmod_uss_item(const char *file, const char *mode, _Bool recursive)
     * }
     */
    public static FunctionDescriptor zusf_c_chmod_uss_item$descriptor() {
        return zusf_c_chmod_uss_item.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * ZUSFBasicResponse_C *zusf_c_chmod_uss_item(const char *file, const char *mode, _Bool recursive)
     * }
     */
    public static MethodHandle zusf_c_chmod_uss_item$handle() {
        return zusf_c_chmod_uss_item.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * ZUSFBasicResponse_C *zusf_c_chmod_uss_item(const char *file, const char *mode, _Bool recursive)
     * }
     */
    public static MemorySegment zusf_c_chmod_uss_item$address() {
        return zusf_c_chmod_uss_item.ADDR;
    }

    /**
     * {@snippet lang=c :
     * ZUSFBasicResponse_C *zusf_c_chmod_uss_item(const char *file, const char *mode, _Bool recursive)
     * }
     */
    public static MemorySegment zusf_c_chmod_uss_item(MemorySegment file, MemorySegment mode, boolean recursive) {
        var mh$ = zusf_c_chmod_uss_item.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("zusf_c_chmod_uss_item", file, mode, recursive);
            }
            return (MemorySegment)mh$.invokeExact(file, mode, recursive);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class zusf_c_delete_uss_item {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            ZusfCApi.C_POINTER,
            ZusfCApi.C_POINTER,
            ZusfCApi.C_BOOL
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("zusf_c_delete_uss_item");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * ZUSFBasicResponse_C *zusf_c_delete_uss_item(const char *file, _Bool recursive)
     * }
     */
    public static FunctionDescriptor zusf_c_delete_uss_item$descriptor() {
        return zusf_c_delete_uss_item.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * ZUSFBasicResponse_C *zusf_c_delete_uss_item(const char *file, _Bool recursive)
     * }
     */
    public static MethodHandle zusf_c_delete_uss_item$handle() {
        return zusf_c_delete_uss_item.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * ZUSFBasicResponse_C *zusf_c_delete_uss_item(const char *file, _Bool recursive)
     * }
     */
    public static MemorySegment zusf_c_delete_uss_item$address() {
        return zusf_c_delete_uss_item.ADDR;
    }

    /**
     * {@snippet lang=c :
     * ZUSFBasicResponse_C *zusf_c_delete_uss_item(const char *file, _Bool recursive)
     * }
     */
    public static MemorySegment zusf_c_delete_uss_item(MemorySegment file, boolean recursive) {
        var mh$ = zusf_c_delete_uss_item.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("zusf_c_delete_uss_item", file, recursive);
            }
            return (MemorySegment)mh$.invokeExact(file, recursive);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class zusf_c_chown_uss_item {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            ZusfCApi.C_POINTER,
            ZusfCApi.C_POINTER,
            ZusfCApi.C_POINTER,
            ZusfCApi.C_BOOL
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("zusf_c_chown_uss_item");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * ZUSFBasicResponse_C *zusf_c_chown_uss_item(const char *file, const char *owner, _Bool recursive)
     * }
     */
    public static FunctionDescriptor zusf_c_chown_uss_item$descriptor() {
        return zusf_c_chown_uss_item.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * ZUSFBasicResponse_C *zusf_c_chown_uss_item(const char *file, const char *owner, _Bool recursive)
     * }
     */
    public static MethodHandle zusf_c_chown_uss_item$handle() {
        return zusf_c_chown_uss_item.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * ZUSFBasicResponse_C *zusf_c_chown_uss_item(const char *file, const char *owner, _Bool recursive)
     * }
     */
    public static MemorySegment zusf_c_chown_uss_item$address() {
        return zusf_c_chown_uss_item.ADDR;
    }

    /**
     * {@snippet lang=c :
     * ZUSFBasicResponse_C *zusf_c_chown_uss_item(const char *file, const char *owner, _Bool recursive)
     * }
     */
    public static MemorySegment zusf_c_chown_uss_item(MemorySegment file, MemorySegment owner, boolean recursive) {
        var mh$ = zusf_c_chown_uss_item.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("zusf_c_chown_uss_item", file, owner, recursive);
            }
            return (MemorySegment)mh$.invokeExact(file, owner, recursive);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class zusf_c_chtag_uss_item {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            ZusfCApi.C_POINTER,
            ZusfCApi.C_POINTER,
            ZusfCApi.C_POINTER,
            ZusfCApi.C_BOOL
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("zusf_c_chtag_uss_item");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * ZUSFBasicResponse_C *zusf_c_chtag_uss_item(const char *file, const char *tag, _Bool recursive)
     * }
     */
    public static FunctionDescriptor zusf_c_chtag_uss_item$descriptor() {
        return zusf_c_chtag_uss_item.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * ZUSFBasicResponse_C *zusf_c_chtag_uss_item(const char *file, const char *tag, _Bool recursive)
     * }
     */
    public static MethodHandle zusf_c_chtag_uss_item$handle() {
        return zusf_c_chtag_uss_item.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * ZUSFBasicResponse_C *zusf_c_chtag_uss_item(const char *file, const char *tag, _Bool recursive)
     * }
     */
    public static MemorySegment zusf_c_chtag_uss_item$address() {
        return zusf_c_chtag_uss_item.ADDR;
    }

    /**
     * {@snippet lang=c :
     * ZUSFBasicResponse_C *zusf_c_chtag_uss_item(const char *file, const char *tag, _Bool recursive)
     * }
     */
    public static MemorySegment zusf_c_chtag_uss_item(MemorySegment file, MemorySegment tag, boolean recursive) {
        var mh$ = zusf_c_chtag_uss_item.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("zusf_c_chtag_uss_item", file, tag, recursive);
            }
            return (MemorySegment)mh$.invokeExact(file, tag, recursive);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class zusf_c_free_basic_response {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            ZusfCApi.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("zusf_c_free_basic_response");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void zusf_c_free_basic_response(ZUSFBasicResponse_C *response)
     * }
     */
    public static FunctionDescriptor zusf_c_free_basic_response$descriptor() {
        return zusf_c_free_basic_response.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void zusf_c_free_basic_response(ZUSFBasicResponse_C *response)
     * }
     */
    public static MethodHandle zusf_c_free_basic_response$handle() {
        return zusf_c_free_basic_response.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void zusf_c_free_basic_response(ZUSFBasicResponse_C *response)
     * }
     */
    public static MemorySegment zusf_c_free_basic_response$address() {
        return zusf_c_free_basic_response.ADDR;
    }
